# fast-api-tutorial

./: .gitignore  Makefile  debug.py  docker-compose.yml  main.py
.devcontainer/: devcontainer.json
application/: database.py  main.py  models.py  pyproject.toml  schemas.py
application/config/: csrf.py  depencency.py  dependency.py  env.py  jwt.py
application/infrastructure/: database.py  email.py  slack.py
application/infrastructure/emails/: email.py
application/infrastructure/emails/templates/: welcome_email.html
application/migrations/: env.py
application/migrations/versions/: 109832a58628_initial_migration.py  21ff600fcc09_initial_migration.py  3fcf326e597c_initial_migration.py  44d9d100cc8b_.py  693816a77710_.py  a18b650c5365_.py  ae0d0935f47f_.py  b1cc5c5835e3_.py  c264ef07baef_.py  f51fc04bb1b9_.py  fe9fc6c0634b_.py
application/models/: __init__.py  todo.py  user.py
application/repositories/: todo_repository.py  user_repository.py
application/routers/: auth.py  todos.py
application/schemas/: auth.py  auth_schema.py  todo_schema.py  todos.py
application/schemas/requests/: auth_request_schema.py  todo_request_schema.py
application/schemas/responses/: todo_response_schema.py
application/tests/: conftest.py  test_auth.py  test_main.py  test_todo.py  utils.py
application/tests/factories/: user.py
application/usecases/: todo_usecase.py  user_usecase.py  user_usercase.py
application/usercases/: todo_usecase.py
containers/fastapi/: Dockerfile
containers/postgres/: init.sql
