[project]
name = "application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt>=4.3.0",
    "boto3>=1.38.8",
    "cryptography>=44.0.3",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "fastapi-csrf-protect>=1.0.3",
    "fastapi-mail>=1.4.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sendgrid>=6.11.0",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.41.2",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=6.1.1",
    "pytest-custom-exit-code>=0.3.0",
    "pytest-github-actions-annotate-failures>=0.3.0",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.8",
]
